# warren

./: README.md  pyproject.toml
benchmarks/: bench.py  results.md
docs/: index.html
docs/pysrc/warren/: __init__.py  bruteforce.py
examples/: quickstart.py
src/warren/: distance.py  hnsw.py  io.py
tests/: test_benchmark.py  test_bruteforce.py  test_distance.py  test_hnsw.py  test_io.py
